...
            text = title,
            fontSize = MaterialTheme.typography.h4.fontSize,
            fontWeight = FontWeight.Bold,
            modifier = Modifier
                .weight(1f)
                .padding(vertical = 12.dp)
                .testTag("ListTitle"),
            textAlign = TextAlign.Start,
            color = MaterialTheme.colors.Accent,
            maxLines = 1,
            softWrap = true
        )

...
                    contentDescription = stringResource(id = R.string.addFavourite),
                    tint = MaterialTheme.colors.Accent,
                    modifier = Modifier
                        .noRippleClickable { onFavouriteClick() }
                        .padding(horizontal = 8.dp)
                        .size(24.dp)
                        .testTag("AddFavourite")
                )
            }
        }
    }
}

...
