...
    val clearIconColor = animateColorAsState(
        if (searchName.isEmpty()) Color.Transparent else MaterialTheme.colors.Accent
    )

    Column(modifier = modifier.semantics { contentDescription = "SearchWidget" }) {
        OutlinedTextField(
            modifier = Modifier.fillMaxWidth().semantics { contentDescription = "SearchTextFiled" },
            value = searchName,
            onValueChange = {
                onSearchNameChange(it)
            },
            placeholder = {
                Text("Search...")
...
