...
                searchName = searchQuery,
                searchError = "",
                onSearchNameChange = { searchQuery -> viewModel.onSearchQueryChange(searchQuery.trim()) },
                onSearchClick = { viewModel.searchFollower() }
            )

            LazyVerticalGrid(
                modifier = Modifier.testTag("LazyVerticalGrid"),
                cells = GridCells.Adaptive(minSize = 120.dp),
            ) {
                if (searchQuery.isEmpty()) {
                    items(
                        items = followers,
...
